# Turnstile

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  README.md
.github/workflows/: ci.yml  readiness.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: broadcast.rs  chain.rs  lib.rs  pools.rs  scan.rs  tip.rs  verdict.rs  zingo.rs
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/readiness/: page.tsx
frontend/components/check/: CheckPanel.tsx  UfvkForm.tsx  VerdictCard.tsx
frontend/components/countdown/: LiveCountdown.tsx
frontend/components/guides/: SubscribeCard.tsx
frontend/components/landing/: AlertBand.tsx  BentoGrid.tsx  CountdownSection.tsx  Hero.tsx  HeroVisual.tsx  LiveBadge.tsx  TelemetryBar.tsx
frontend/components/layout/: Footer.tsx  Header.tsx
frontend/content/: readiness-signals.json  readiness.json
frontend/content/guides/: zashi.ts
frontend/lib/: constants.ts  format.ts  types.ts  zip321.test.ts  zip321.ts
scanner/: Cargo.toml  Dockerfile
scanner/src/: alerts.rs  jobs.rs  main.rs  routes.rs  zingo.rs
scripts/: check-readiness-sources.mjs
video/: assemble.js  captions.js  cards.js  cursor.js  gen-vo.js  package-lock.json  package.json  probe-explorer.js  recorder.js  script.js  wasm-live.js  wasm-proof.js
video/assets/vo/: durations.json
video/frames/alerts/: frames.txt
video/frames/check/: frames.txt
video/frames/guides/: frames.txt
video/frames/hook/: frames.txt
video/frames/mainnet/: frames.txt
(+6 files in other folders)
