[package]
name = "turnstile-check"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "turnstile-check"
path = "src/main.rs"

[dependencies]
turnstile-core = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
